Removed the unncecessary think